Fix some Sonar issues
Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>