@@ -8,7 +8,6 @@
 package com.powsybl.iidm.serde;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
 import com.powsybl.commons.extensions.ExtensionSerDe;
@@ -20,6 +19,7 @@ import com.powsybl.iidm.serde.extensions.AbstractVersionableNetworkExtensionSerD
 
 import java.io.InputStream;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 
 /**
@@ -53,16 +53,16 @@ public class LoadMockSerDe extends AbstractVersionableNetworkExtensionSerDe<Load
 
     @Override
     public List<InputStream> getXsdAsStreamList() {
-        return ImmutableList.of(getClass().getResourceAsStream("/V1_0/xsd/loadMock_V0_1.xsd"),
-                getClass().getResourceAsStream("/V1_0/xsd/loadMock_V0_2.xsd"),
-                getClass().getResourceAsStream("/V1_0/xsd/loadMock_V1_0.xsd"),
-                getClass().getResourceAsStream("/V1_1/xsd/loadMock_V1_1.xsd"),
-                getClass().getResourceAsStream("/V1_1/xsd/loadMock_V1_2.xsd"));
+        return List.of(Objects.requireNonNull(getClass().getResourceAsStream("/V1_0/xsd/loadMock_V0_1.xsd")),
+                Objects.requireNonNull(getClass().getResourceAsStream("/V1_0/xsd/loadMock_V0_2.xsd")),
+                Objects.requireNonNull(getClass().getResourceAsStream("/V1_0/xsd/loadMock_V1_0.xsd")),
+                Objects.requireNonNull(getClass().getResourceAsStream("/V1_1/xsd/loadMock_V1_1.xsd")),
+                Objects.requireNonNull(getClass().getResourceAsStream("/V1_1/xsd/loadMock_V1_2.xsd")));
     }
 
     @Override
     public void write(LoadMockExt extension, SerializerContext context) {
-        // do nothing
+        // empty extension
     }
 
     @Override
